# project-merope

./: .gitignore  MeropeModule.gdnlib  README.md  default_env.tres  godot.d.ts  package.json  project.godot
Module/: .gitignore  CMakeLists.txt
Module/cmake/: CompileOptions.cmake
Module/module/: CMakeLists.txt
Module/module/source/: Test.cpp  Test.hpp  module.cpp
Player/: Test.gdns  Test.tscn  Test.tsx
Player/Ship/: .gitignore  CockpitHud.tscn  Cockpit_Blue.material  Fighter_Glass.material  Fighter_HUD.material  Plug_and_Fly_Base.glb.import  Plugs_Blue.material  Ship.tscn
Player/Ship/Textures/: Cockpit_AO.png.import  Cockpit_Color01.png.import  Cockpit_Color02.png.import  Cockpit_Color03.png.import  Cockpit_Color04.png.import  Cockpit_Emissive.png.import  Cockpit_Mask.png.import  Cockpit_Metallic.png.import  Cockpit_Normal.png.import  Cockpit_Roughness.png.import  Fighter_HUD.png.import  Fighter_Weapons-AO.png.import  Fighter_Weapons-Albedo.png.import  Fighter_Weapons-Normal.png.import  Fighter_Weapons-metallic.png.import  Fighter_Weapons-roughness.png.import  Plugs_AO.png.import  Plugs_Color01.png.import  Plugs_Color02.png.import  Plugs_Color03.png.import  Plugs_Color04.png.import  Plugs_Emissive.png.import  Plugs_Mask.png.import  Plugs_Metallic.png.import  Plugs_Normal.png.import  Plugs_Roughness.png.import
